# tree-sitter-turnip_text

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-turnip-text.pc.in
bindings/c/tree_sitter/: tree-sitter-turnip-text.h
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/turniptext/: TreeSitterTurnipText.java
bindings/java/test/: TreeSitterTurnipTextTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_turnip_text/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTurnipTextTests/: TreeSitterTurnipTextTests.swift
bindings/zig/: root.zig  test.zig
example/: example.ttext
src/: grammar.json  node-types.json  parser.c  scanner.c
