[package]
name = "tree-sitter-turnip-text"
description = "TurnipText grammar for tree-sitter"
version = "0.1.0"
authors = ["Samuel W. Stark"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "turnip-text"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/theturboturnip/tree-sitter-turnip_text"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
